zien24_implementation/org/objects/Product_Group__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price_Original__c</fullName>
        <label>Base Price Original</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deleted_Datetime__c</fullName>
        <label>Deleted Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_Original__c</fullName>
        <label>Description Original</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Original__c</fullName>
        <label>Name Original</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>